# HiringAsst

./: CMakeLists.txt  README.md  sgnCandidates.db  sql_queries.txt
include/: DBInterface.h  MyDateTime.h  RESTful.h
qt/: CMakeLists.txt  candidate.cpp  candidate.h  jsonmodel.cpp  jsonmodel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  networkmanager.cpp  networkmanager.h  nlohmann_json.hpp  parser.cpp  parser.h
src/: DBInterface.cpp  RESTful.cpp  SGNMain.cpp
